
	* erc-join.el: Rename from erc-autojoin.el.

	* erc-networks.el: Rename from erc-nets.el.

	* erc-services.el: Rename from erc-nickserv.el.

	* erc.el (erc-migrate-modules): New function that eases migration
	of module names.
	(erc-modules): Call erc-migrate-modules in the :get accessor.
	(erc-modules, erc-update-modules): Update for new modules names.

2006-02-05  Michael Olson  <mwolson@gnu.org>

	* erc-spelling.el (erc-spelling-init): If
	`erc-spelling-dictionaries' is nil, do not set
	ispell-local-dictionary.  Before, it was being set to nil, which
	was causing a long delay while the ispell process restarted.
	(erc-spelling-unhighlight-word): New function that removes
	flyspell properties from a spell-checked word.
	(erc-spelling-flyspell-verify): Don't spell-check nicks or words
	that have '/' before them.

2006-02-04  Michael Olson  <mwolson@gnu.org>

	* erc-autojoin.el: Use (eval-when-compile (require 'cl)).

	* erc-complete.el (erc-nick-completion-exclude-myself)
	(erc-try-complete-nick): Use better function for getting list of
	channel users.

	* erc-goodies.el: Docfix.

	* erc-stamp.el: Use new arch tagline, since the other one wasn't
	being treated properly.

	* erc.el (erc-version-string): Release ERC 5.1.1

2006-02-03  Zhang Wei  <id.brep@gmail.com>  (tiny change)

	* erc.el (erc-version-string): Don't hard-code Emacs version.
	(erc-version): Use emacs-version.

2006-01-31  Michael Olson  <mwolson@gnu.org>

	* erc-stamp.el: Update copyright years.

2006-01-30  Simon Josefsson  <jas@extundo.com>

	* erc.el (erc-open-ssl-stream): Use tls.el.

2006-01-30  Michael Olson  <mwolson@gnu.org>

	* erc-stamp.el (erc-timestamp-right-align-by-pixel): New option
	that determines whether to use pixel values to align right
	timestamps.  The default is not to do so, since it only works with
	Emacs22 on X, and even then some people have trouble.
	(erc-insert-aligned): Use `erc-timestamp-right-align-by-pixel'.

2006-01-29  Michael Olson  <mwolson@gnu.org>
